move add placement and fix the spacing and links on Milan page

--- a/css/custom.css
+++ b/css/custom.css
@@ -2,9 +2,11 @@
 
 /* ADS */
 .adcenter {
-  display: flex;
   justify-content: center;
+  display: flex;
   margin-bottom: 5px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .full{
   border-radius: 100% / 100%;
